--- a/src/app/common-ui/header/header.component.scss
+++ b/src/app/common-ui/header/header.component.scss
@@ -45,6 +45,7 @@
     }
 
     .navbar-toggler {
+            padding: 13px 0px 13px 25px;
         border: none;
     }
 
@@ -484,7 +485,7 @@ li.mat-mdc-menu-trigger.nav-item.active {
     }
 
     ::ng-deep.navbar-toggler {
-        padding: 13px 0px 13px 13px;
+        padding: 13px 0px 13px 25px;
         width: 40px;
     }
 
@@ -494,6 +495,8 @@ li.mat-mdc-menu-trigger.nav-item.active {
     //     transform: translate(-63%, -0%);
     // }
 }
+
+
 
 @media (max-width:768px) {
 
