--- a/src/app/landing-page/views/claim-your-buisness/claim-your-buisness.component.scss
+++ b/src/app/landing-page/views/claim-your-buisness/claim-your-buisness.component.scss
@@ -71,6 +71,10 @@
                 }
             }
         }
+
+        button{
+            white-space: nowrap;
+        }
     }
 
     .claim-container {
